# tokenview

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/tokenview/: README.md
plugins/tokenview/.claude-plugin/: plugin.json
plugins/tokenview/commands/: tokens.md
src/tokenview/: __init__.py  __main__.py  cache.py  cli.py  models.py  watch.py
src/tokenview/analyze/: budget.py  components.py  timeline.py
src/tokenview/render/: _animation.py  budget_view.py  components_view.py  timeline_view.py  watch_view.py
src/tokenview/sources/: claude_md.py  jsonl.py  mcp_estimates.py  plugin_details.py  plugin_list.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/: claude_md_sample.md  plugin_details_truth_serum.txt  plugin_details_versionless.txt  plugin_list.txt  session_minimal.jsonl
tests/render/: test_render_snapshots.py
tests/render/snapshots/: budget.txt  components.txt  timeline.txt
tests/unit/: test_analyze_budget.py  test_analyze_components.py  test_analyze_timeline.py  test_cache.py  test_mcp_estimates.py  test_models.py  test_sources_claude_md.py  test_sources_jsonl.py  test_sources_plugin_details.py  test_sources_plugin_list.py
