[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenview"
version = "0.1.6"
description = "Visibility into Claude Code token consumption per session"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yassir Ait El Aizzi", email = "yassir.aitelaizzi@gmail.com" }]
requires-python = ">=3.10"
keywords = ["claude-code", "tokens", "telemetry", "cli", "anthropic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "rich>=13.7",
  "watchdog>=4.0",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
tokenview = "tokenview.cli:main"

[project.urls]
Homepage = "https://github.com/genytri/tokenview"
Repository = "https://github.com/genytri/tokenview"
Issues = "https://github.com/genytri/tokenview/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenview"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tiktoken", "watchdog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
